src/objects/Retail_Playbook__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Playbooks</relationshipLabel>
        <relationshipName>Playbooks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(Account__r.Country__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description will be added to playbook name. Example: If Description is &quot;James&quot; playbook name will be &quot;Account Name -2013 Q3 - James</inlineHelpText>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OKR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OKR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Period_Year__c</field>
                <operation>equals</operation>
                <valueField>OKR__c.Year__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Period_Quarter__c</field>
                <operation>equals</operation>
                <valueField>OKR__c.Quarter__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OKR__c</referenceTo>
        <relationshipLabel>Playbooks</relationshipLabel>
        <relationshipName>Playbooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_Quarter__c</fullName>
        <description>Used by the retail sales team</description>
        <label>Period Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period_Year__c</fullName>
        <description>Used by the retail sales team</description>
        <label>Period Year</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Playbook_Details__c</fullName>
        <description>Add details to the playbook.</description>
        <inlineHelpText>Explain the playbook in detail. Example: Detailed OKR reference to which this playbooks relates.</inlineHelpText>
        <label>Playbook Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Playbook_Name__c</fullName>
        <formula>IF 
(ISBLANK(Description__c), 
Account__r.Name &amp; &quot; &quot; &amp; TEXT(Period_Year__c ) &amp; &quot; - &quot; &amp; TEXT(Period_Quarter__c), Account__r.Name &amp; &quot; &quot; &amp; TEXT(Period_Year__c ) &amp; &quot; - &quot; &amp; TEXT(Period_Quarter__c) &amp; &quot; - &quot; &amp; Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Playbook Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Account__r.Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason_Description__c</fullName>
        <description>&apos;Reason Description&apos; field if the status is &apos;Behind Plan&apos; and reason is selected among the choices in the picklist. This is important since  merely selecting &apos;Supply Chain&apos; or &apos;Marketing&apos; will not give a clear picture.</description>
        <label>Status Reason Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <inlineHelpText>The reason associated with the status.</inlineHelpText>
        <label>Status Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail &amp; Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Plan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Behind Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahead Of Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>TEXT(Account__r.Sub_Region__c)</formula>
        <label>Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>OKR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLT Engagement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Playbook</label>
    <listViews>
        <fullName>ATT_and_Cricket</fullName>
        <booleanFilter>1 or 2 or (3 AND 4)</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>AT&amp;T</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Cricket</value>
        </filters>
        <filters>
            <field>Period_Quarter__c</field>
            <operation>contains</operation>
            <value>q3</value>
        </filters>
        <filters>
            <field>Period_Year__c</field>
            <operation>contains</operation>
            <value>2014</value>
        </filters>
        <label>ATT and Cricket</label>
    </listViews>
    <listViews>
        <fullName>AT_T_Playbooks</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Description__c</columns>
        <columns>Period_Year__c</columns>
        <columns>Period_Quarter__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>AT&amp;T</value>
        </filters>
        <label>AT&amp;T Playbooks</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Playbook_Name__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Playbook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playbooks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>